--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "swr": "^2.2.5",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
