--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "swr": "^2.2.5",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-image": "~1.12.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
