--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
+    "expo-image": "~1.12.15",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "swr": "^2.2.5",
-    "typescript": "~5.3.3",
-    "expo-image": "~1.12.15"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
